--- a/public/vi/404.html
+++ b/public/vi/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi" class="js csstransforms3d">
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8"> <meta name="description" content="">
 <meta name="author" content="journeyoftheaverageguy@gmail.com">
  <link rel="icon" href="/images/favicon.png" type="image/png">
@@ -9,15 +9,15 @@
   <title>404 Page not found</title>
 
    
-    <link href="/css/nucleus.css?1634205109" rel="stylesheet">
-    <link href="/css/fontawesome-all.min.css?1634205109" rel="stylesheet">
-    <link href="/css/hybrid.css?1634205109" rel="stylesheet">
-    <link href="/css/featherlight.min.css?1634205109" rel="stylesheet">
-    <link href="/css/perfect-scrollbar.min.css?1634205109" rel="stylesheet">
-    <link href="/css/theme.css?1634205109" rel="stylesheet">
-    <link href="/css/hugo-theme.css?1634205109" rel="stylesheet">
+    <link href="/css/nucleus.css?1725149131" rel="stylesheet">
+    <link href="/css/fontawesome-all.min.css?1725149131" rel="stylesheet">
+    <link href="/css/hybrid.css?1725149131" rel="stylesheet">
+    <link href="/css/featherlight.min.css?1725149131" rel="stylesheet">
+    <link href="/css/perfect-scrollbar.min.css?1725149131" rel="stylesheet">
+    <link href="/css/theme.css?1725149131" rel="stylesheet">
+    <link href="/css/hugo-theme.css?1725149131" rel="stylesheet">
     
-      <link href="/css/theme-workshop.css?1634205109" rel="stylesheet">
+      <link href="/css/theme-workshop.css?1725149131" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
@@ -48,7 +48,7 @@
           </p>
           <p>Woops. Looks like this page doesn&#39;t exist ¯\_(ツ)_/¯.</p>
           <p></p>
-          <p><a href='/vi'>Go to homepage</a></p>
+          <p><a href='/vi/'>Go to homepage</a></p>
           <p><img src='/images/gopher-404.jpg' style="width:50%" alt="Page not found!"></p>
         </div>
       </div>
